checkdoc fixes, package-lint fixes, use cl-case for portablity
also set orgstrap-norm-func to orgstrap-norm-func-name if it is not
already bound so that README.org doesn't wind up in a state where the
defvar doesn't get set

--- a/README.org
+++ b/README.org
@@ -1,4 +1,4 @@
-# -*- org-adapt-indentation: nil; org-edit-src-content-indentation: 0; orgstrap-cypher: sha256; orgstrap-block-checksum: ffc1a8df97d5d476a3f9305955a414443b1d9c50dd272c3664b7d91458f4a731; orgstrap-norm-func-name: orgstrap-norm-func--prp-1\.0; -*-
+# -*- org-adapt-indentation: nil; org-edit-src-content-indentation: 0; orgstrap-cypher: sha256; orgstrap-block-checksum: c0c25066edb3aafde08a86f828decae8151022d922763060b04cc20efd4792ba; orgstrap-norm-func-name: orgstrap-norm-func--prp-1\.0; -*-
 # [[orgstrap][jump to orgstrap block for this file]]
 #+title: Bootstrap an org-mode file using file local variables
 #+options: num:nil \n:nil
@@ -70,10 +70,10 @@ The bare minimum needed to make an =org-mode= file executable (with a bit of saf
 (message "orgstrap successful!") ; (ref:im-a-coderef-and-thats-ok)
 ,#+end_src
 
-=orgstrap= a plain-text executable format.
+=orgstrap= a plain-text executable format. Powered by Org mode and Emacs.
 
 # Local Variables:
-# eval: (progn (setq-local orgstrap-min-org-version "8.2.10") (let ((actual (org-version)) (need orgstrap-min-org-version)) (or (fboundp #'orgstrap--confirm-eval) (not need) (string< need actual) (string= need actual) (error "your org is too old! %s < %s" actual need))) (defun orgstrap-norm-func--prp-1\.0 (body) (let ((print-quoted nil)) (prin1-to-string (read (concat "(progn\n" body "\n)"))))) (unless (boundp 'orgstrap-norm-func) (defvar orgstrap-norm-func nil)) (defun orgstrap-norm-embd (body) (funcall orgstrap-norm-func body)) (unless (fboundp #'orgstrap-norm) (defalias 'orgstrap-norm 'orgstrap-norm-embd)) (defun orgstrap--confirm-eval-minimal (lang body) (not (and (member lang '("elisp" "emacs-lisp")) (eq orgstrap-block-checksum (intern (secure-hash orgstrap-cypher (orgstrap-norm body))))))) (unless (fboundp 'orgstrap--confirm-eval) (defalias 'orgstrap--confirm-eval 'orgstrap--confirm-eval-minimal)) (let ((ocbe org-confirm-babel-evaluate)) (setq-local orgstrap-norm-func orgstrap-norm-func-name) (setq-local org-confirm-babel-evaluate #'orgstrap--confirm-eval) (unwind-protect (save-excursion (org-babel-goto-named-src-block "orgstrap") (org-babel-execute-src-block)) (setq-local org-confirm-babel-evaluate ocbe))))
+# eval: (progn (setq-local orgstrap-min-org-version "8.2.10") (let ((actual (org-version)) (need orgstrap-min-org-version)) (or (fboundp #'orgstrap--confirm-eval) (not need) (string< need actual) (string= need actual) (error "Your org is too old! %s < %s" actual need))) (defun orgstrap-norm-func--prp-1\.0 (body) (let ((print-quoted nil)) (prin1-to-string (read (concat "(progn\n" body "\n)"))))) (unless (boundp 'orgstrap-norm-func) (defvar orgstrap-norm-func orgstrap-norm-func-name)) (defun orgstrap-norm-embd (body) (funcall orgstrap-norm-func body)) (unless (fboundp #'orgstrap-norm) (defalias 'orgstrap-norm 'orgstrap-norm-embd)) (defun orgstrap--confirm-eval-minimal (lang body) (not (and (member lang '("elisp" "emacs-lisp")) (eq orgstrap-block-checksum (intern (secure-hash orgstrap-cypher (orgstrap-norm body))))))) (unless (fboundp 'orgstrap--confirm-eval) (defalias 'orgstrap--confirm-eval 'orgstrap--confirm-eval-minimal)) (let ((ocbe org-confirm-babel-evaluate)) (setq-local orgstrap-norm-func orgstrap-norm-func-name) (setq-local org-confirm-babel-evaluate #'orgstrap--confirm-eval) (unwind-protect (save-excursion (org-babel-goto-named-src-block "orgstrap") (org-babel-execute-src-block)) (setq-local org-confirm-babel-evaluate ocbe))))
 # End:
 #+end_src
 * Inspiration
@@ -244,7 +244,7 @@ anyway so don't bother.
       (not need)
       (string< need actual)
       (string= need actual)
-      (error "your org is too old! %s < %s" actual need)))
+      (error "Your Org is too old! %s < %s" actual need)))
 #+end_src
 #+caption: Portability note.
 #+begin_verse
@@ -256,7 +256,7 @@ anyway so don't bother.
 #+name: orgstrap-normalization-common-embed
 #+begin_src elisp
 (unless (boundp 'orgstrap-norm-func)
-  (defvar orgstrap-norm-func nil))
+  (defvar orgstrap-norm-func orgstrap-norm-func-name))
 
 (defun orgstrap-norm-embd (body)
   "Normalize BODY."
@@ -336,7 +336,7 @@ is why 1.0 is included. =print-quoted= is critical for consistent hashing.
 #+name: block-orgstrap-norm-func--prp-1.0
 #+begin_src elisp :noweb yes :eval never
 (defun orgstrap-norm-func--prp-1.0 (body)
-  "Normalize BODY using prp-1.0"
+  "Normalize BODY using prp-1.0."
   <<orgstrap-code-normalization--prin1-read-progn-1.0>>)
 #+end_src
 ** Definitions
@@ -353,6 +353,7 @@ that they are trying to load.
 #+caption: Portable confirm eval.
 #+name: orgstrap-portable-confirm-eval
 #+begin_src elisp :eval never :noweb yes
+;;;###autoload
 (defun orgstrap--confirm-eval-portable (lang body)
   ;; `org-confirm-babel-evaluate' will prompt the user when the value
   ;; that is returned is non-nil, therefore we negate positive matchs
@@ -368,6 +369,7 @@ that they are trying to load.
               ;;(message "%s" body-normalized)
               (eq orgstrap-block-checksum content-checksum)))))
 ;; portable eval is used as the default implementation in orgstrap.el
+;;;###autoload
 (defalias 'orgstrap--confirm-eval 'orgstrap--confirm-eval-portable)
 #+end_src
 
@@ -405,7 +407,7 @@ Once =orgstrap-confirm-eval= is defined the rest of the =eval:= local variables 
     (setq-local org-confirm-babel-evaluate ocbe)))
 #+end_src
 
-Since orgstrap-norm-func is a dynamic variable it simplifies the
+Since =orgstrap-norm-func= is a dynamic variable it simplifies the
 potential future case where we don't embed the normalization function,
 still not sure if we really want to do that though
 ** Note on noweb support
@@ -429,7 +431,7 @@ Here is the prop line from the first line of this file that
 includes the cypher and checksum of the =orgstrap= block.
 #+name: local-variables-prop-line-example
 #+begin_src org :eval never
-# -*- org-adapt-indentation: nil; org-edit-src-content-indentation: 0; orgstrap-cypher: sha256; orgstrap-block-checksum: ffc1a8df97d5d476a3f9305955a414443b1d9c50dd272c3664b7d91458f4a731; orgstrap-norm-func-name: orgstrap-norm-func--prp-1\.0; -*-
+# -*- org-adapt-indentation: nil; org-edit-src-content-indentation: 0; orgstrap-cypher: sha256; orgstrap-block-checksum: c0c25066edb3aafde08a86f828decae8151022d922763060b04cc20efd4792ba; orgstrap-norm-func-name: orgstrap-norm-func--prp-1\.0; -*-
 #+end_src
 
 # BE VERY CAREFUL WITH MANUAL EDITS
@@ -439,7 +441,7 @@ Here are the local variables from the end of the file.
 #+begin_src org :eval never
 
 # Local Variables:
-# eval: (progn (setq-local orgstrap-min-org-version nil) (let ((actual (org-version)) (need orgstrap-min-org-version)) (or (fboundp #'orgstrap--confirm-eval) (not need) (string< need actual) (string= need actual) (error "your org is too old! %s < %s" actual need))) (defun orgstrap-norm-func--prp-1\.0 (body) (let ((print-quoted nil)) (prin1-to-string (read (concat "(progn\n" body "\n)"))))) (unless (boundp 'orgstrap-norm-func) (defvar orgstrap-norm-func nil)) (defun orgstrap-norm-embd (body) (funcall orgstrap-norm-func body)) (unless (fboundp #'orgstrap-norm) (defalias 'orgstrap-norm 'orgstrap-norm-embd)) (defun orgstrap-org-src-coderef-regexp (fmt &optional label) (let ((fmt org-coderef-label-format)) (format "\\([:blank:]*\\(%s\\)[:blank:]*\\)$" (replace-regexp-in-string "%s" (if label (regexp-quote label) "\\([-a-zA-Z0-9_][-a-zA-Z0-9_ ]*\\)") (regexp-quote fmt) nil t)))) (unless (fboundp 'org-src-coderef-regexp) (defalias 'org-src-coderef-regexp 'orgstrap-org-src-coderef-regexp)) (defun orgstrap--expand-body (info) (let ((coderef (nth 6 info)) (expand (if (org-babel-noweb-p (nth 2 info) :eval) (org-babel-expand-noweb-references info) (nth 1 info)))) (if (not coderef) expand (replace-regexp-in-string (org-src-coderef-regexp coderef) "" expand nil nil 1)))) (defun orgstrap--confirm-eval-portable (lang body) (not (and (member lang '("elisp" "emacs-lisp")) (let* ((body (orgstrap--expand-body (org-babel-get-src-block-info))) (body-normalized (orgstrap-norm body)) (content-checksum (intern (secure-hash orgstrap-cypher body-normalized)))) (eq orgstrap-block-checksum content-checksum))))) (defalias 'orgstrap--confirm-eval 'orgstrap--confirm-eval-portable) (let ((ocbe org-confirm-babel-evaluate)) (setq-local orgstrap-norm-func orgstrap-norm-func-name) (setq-local org-confirm-babel-evaluate #'orgstrap--confirm-eval) (unwind-protect (save-excursion (org-babel-goto-named-src-block "orgstrap") (org-babel-execute-src-block)) (setq-local org-confirm-babel-evaluate ocbe))))
+# eval: (progn (setq-local orgstrap-min-org-version nil) (let ((actual (org-version)) (need orgstrap-min-org-version)) (or (fboundp #'orgstrap--confirm-eval) (not need) (string< need actual) (string= need actual) (error "Your org is too old! %s < %s" actual need))) (defun orgstrap-norm-func--prp-1\.0 (body) (let ((print-quoted nil)) (prin1-to-string (read (concat "(progn\n" body "\n)"))))) (unless (boundp 'orgstrap-norm-func) (defvar orgstrap-norm-func orgstrap-norm-func-name)) (defun orgstrap-norm-embd (body) (funcall orgstrap-norm-func body)) (unless (fboundp #'orgstrap-norm) (defalias 'orgstrap-norm 'orgstrap-norm-embd)) (defun orgstrap-org-src-coderef-regexp (fmt &optional label) (let ((fmt org-coderef-label-format)) (format "\\([:blank:]*\\(%s\\)[:blank:]*\\)$" (replace-regexp-in-string "%s" (if label (regexp-quote label) "\\([-a-zA-Z0-9_][-a-zA-Z0-9_ ]*\\)") (regexp-quote fmt) nil t)))) (unless (fboundp #'org-src-coderef-regexp) (defalias 'org-src-coderef-regexp 'orgstrap-org-src-coderef-regexp)) (defun orgstrap--expand-body (info) (let ((coderef (nth 6 info)) (expand (if (org-babel-noweb-p (nth 2 info) :eval) (org-babel-expand-noweb-references info) (nth 1 info)))) (if (not coderef) expand (replace-regexp-in-string (org-src-coderef-regexp coderef) "" expand nil nil 1)))) (defun orgstrap--confirm-eval-portable (lang body) (not (and (member lang '("elisp" "emacs-lisp")) (let* ((body (orgstrap--expand-body (org-babel-get-src-block-info))) (body-normalized (orgstrap-norm body)) (content-checksum (intern (secure-hash orgstrap-cypher body-normalized)))) (eq orgstrap-block-checksum content-checksum))))) (defalias 'orgstrap--confirm-eval 'orgstrap--confirm-eval-portable) (let ((ocbe org-confirm-babel-evaluate)) (setq-local orgstrap-norm-func orgstrap-norm-func-name) (setq-local org-confirm-babel-evaluate #'orgstrap--confirm-eval) (unwind-protect (save-excursion (org-babel-goto-named-src-block "orgstrap") (org-babel-execute-src-block)) (setq-local org-confirm-babel-evaluate ocbe))))
 # End:
 #+end_src
 ** Historical local variables
@@ -475,6 +477,9 @@ that anyone anywhere is running one of those versions is approximately zero.
 #+name: orgstrap-expand-body
 #+begin_src elisp :eval never
 (defun orgstrap-org-src-coderef-regexp (fmt &optional label)
+  "Backport `org-src-coderef-regexp' for 24 and 25.
+See the upstream docstring for info on LABEL.
+FMT has the wrong meaning in 24 and 25."
   (let ((fmt org-coderef-label-format))
     (format "\\([:blank:]*\\(%s\\)[:blank:]*\\)$"
             (replace-regexp-in-string
@@ -484,7 +489,7 @@ that anyone anywhere is running one of those versions is approximately zero.
                "\\([-a-zA-Z0-9_][-a-zA-Z0-9_ ]*\\)")
              (regexp-quote fmt)
              nil t))))
-(unless (fboundp 'org-src-coderef-regexp)
+(unless (fboundp #'org-src-coderef-regexp)
   (defalias 'org-src-coderef-regexp 'orgstrap-org-src-coderef-regexp))
 (defun orgstrap--expand-body (info)
   "Expand noweb references in INFO body and remove any coderefs."
@@ -529,7 +534,7 @@ Only runs when the contents of the orgstrap block have changed."
   "Set whether minimal, smaller but less portable variables are used.
 If nil then backward compatible local variables are used instead.
 If the value is customized to be non-nil then compact local variables
-are used and `orgstrap-min-org-version' is set accordingly. If the
+are used and `orgstrap-min-org-version' is set accordingly.  If the
 current version of org mode does not support the features required to
 use the minimal variables then the portable variables are used instead."
   :type 'boolean
@@ -568,12 +573,6 @@ The macro provides local bindings for four names:
                 (body (orgstrap--expand-body info)))
            ,@macro-body)
        (org-mark-ring-goto))))
-
-(defun orgstrap--update-file-local-variables ()
-  ;; only update if we are using minimal variables
-  (unless (or (fboundp #'org-babel--expand-body)
-              (not (using-noweb block)))
-    (use minimal block)))
 
 (defun orgstrap--update-on-change ()
   "Run via the `before-save-hook' local variable.
@@ -662,6 +661,10 @@ A note on filter aka =cl-remove-if-not= in =orgstrap--add-file-local-variables= 
 The most portable thing to do for now is =(require 'cl-lib)= since we
 don't currently support anything below 23. Then use =cl-remove-if-not=.
 
+There is a similar issue with =pcase=, which is that in =emacs-24= the
+syntax was closer to =cl-case= when dealing with symbols. Since =cl-lib=
+is already in use, =cl-case= is the logical solution for portability.
+
 #+caption: init helpers
 #+name: orgstrap-init-helper-defuns
 #+begin_src emacs-lisp :results none :lexical yes :noweb yes
@@ -674,7 +677,8 @@ don't currently support anything below 23. Then use =cl-remove-if-not=.
 ;; local variable generation functions
 
 (defun orgstrap--get-min-org-version (info minimal)
-  "Get the minimum org-version required to run the orgstrap block for this file."
+  "Get minimum org mode version needed by the orgstrap block for this file.
+INFO is the source block info.  MINIMAL sets whether to use minimal local vars."
   (if minimal
       (let ((coderef (nth 6 info))
             (noweb (org-babel-noweb-p (nth 2 info) :eval)))
@@ -694,13 +698,14 @@ don't currently support anything below 23. Then use =cl-remove-if-not=.
         "8.2.10")))
 
 (defun orgstrap--have-min-org-version (info minimal)
-  "Test if the current version of org meets minimum requirements
-to use minimal local variables for the current block."
+  "See if current version of org meets minimum requirements for orgstrap block.
+INFO is the source block info.
+MINIMAL is passed to `orgstrap--get-min-org-version'."
   (let ((actual (org-version))
         (need (orgstrap--get-min-org-version info minimal)))
     (or (not need)
-        (string> actual need)
-        (string= actual need))))
+        (string< need actual)
+        (string= need actual))))
 
 (defun orgstrap--dedoc (sexp)
   "Remove docstrings from SEXP."
@@ -712,7 +717,7 @@ to use minimal local variables for the current block."
                    (elt sexp 4)))
           (append (cl-subseq sexp 0 3) (cl-subseq sexp 4))
         sexp)
-    (mapcar #'orgstrap-dedoc sexp)))
+    (mapcar #'orgstrap--dedoc sexp)))
 
 (defun orgstrap--local-variables--check-version (info &optional minimal)
   "Return the version check local variables given INFO and MINIMAL."
@@ -723,11 +728,11 @@ to use minimal local variables for the current block."
 (defun orgstrap--local-variables--norm (&optional norm-func-name)
   "Return the normalization function for local variables given NORM-FUNC-NAME."
   (let ((norm-func-name (or norm-func-name orgstrap-norm-func)))
-    (pcase norm-func-name
-      ('orgstrap-norm-func--prp-1.0
+    (cl-case norm-func-name
+      (orgstrap-norm-func--prp-1.0
        '(
          <<block-orgstrap-norm-func--prp-1.0>>))
-      (_ (error "Don't know that normalization function %s" norm-func-name)))))
+      (otherwise (error "Don't know that normalization function %s" norm-func-name)))))
 
 (defun orgstrap--local-variables--norm-common ()
   "Return the common normalization functions for local variables."
@@ -835,11 +840,12 @@ If a block with that name already exists raise an error."
 
 (defun orgstrap--add-file-local-variables (&optional minimal norm-func-name)
   "Add the file local variables needed to make orgstrap work.
-MINIMAL is currently used to control whether portable or minimal
-is used. Version should be orthognal to whether the block supports noweb
-and old versions of `org-mode' and the selection for noweb should
-be detected automatically, similarly we could automatically include
-a version test and fail if the version is unsupported."
+MINIMAL is used to control whether the portable or minimal block is used.
+If MINIMAL is set but the orgstrap block uses features like noweb and
+uncommented coderefs and function `org-version' is too old, then the portable
+block will be used.  NORM-FUNC-NAME is an optional argument that can be provided
+to determine which normalization function is used independent of the current
+buffer or global setting for `orgstrap-norm-func'."
   ;; switching comments probably wont work ? we can try
   ;; Use a prefix argument (i.e. C-u) to add file local variables comments instead of in a :noexport:
   (interactive)
@@ -873,8 +879,10 @@ a version test and fail if the version is unsupported."
 
 ;; init user facing functions
 ;;;###autoload
-(defun orgstrap-init (&optional arg)
-  "Initialize orgstrap in the current buffer and enable command `orgstrap-mode'."
+(defun orgstrap-init (&optional prefix-argument)
+  "Initialize orgstrap in the current buffer and enable command `orgstrap-mode'.
+PREFIX-ARGUMENT is essentially minimal from other functions, when non-nil
+the minimal local variables will be used if possible."
   (interactive "P")
   (unless (eq major-mode 'org-mode)
     (error "Cannot orgstrap, buffer not in `org-mode' it is in %s!" major-mode))
@@ -885,7 +893,7 @@ a version test and fail if the version is unsupported."
     (orgstrap-add-block-checksum)
     (orgstrap--add-link-to-orgstrap-block)
     ;; FIXME sometimes local variables don't populate due to an out of range error
-    (orgstrap--add-file-local-variables (or arg orgstrap-use-minimal-local-variables))
+    (orgstrap--add-file-local-variables (or prefix-argument orgstrap-use-minimal-local-variables))
     (orgstrap-mode)))
 #+end_src
 
@@ -938,7 +946,7 @@ XXX NOTE THAT THIS CANNOT BE USED WITH #+BEGIN_EXAMPLE BLOCKS."
          (body-unexpanded (nth 1 info))
          (body (orgstrap--expand-body info))
          (body-normalized
-          (orgstrap-norm body #'orgstrap-norm-func))
+          (orgstrap-norm body))
          (cypher (or cypher (orgstrap--current-buffer-cypher))))
     (ignore params body-unexpanded)
     (secure-hash cypher body-normalized)))
@@ -950,7 +958,7 @@ XXX NOTE THAT THIS CANNOT BE USED WITH #+BEGIN_EXAMPLE BLOCKS."
     (ignore params body-unexpanded)
     (let ((cypher (or cypher (orgstrap--current-buffer-cypher)))
           (body-normalized
-           (orgstrap-norm body #'orgstrap-norm-func)))
+           (orgstrap-norm body)))
       (secure-hash cypher body-normalized))))
 
 (defun orgstrap-run-additional-blocks (&rest name-checksum) ;(ref:oab)
@@ -1019,7 +1027,10 @@ minimal as possible is critical.
 (provide 'orgstrap)
 
 ;;; orgstrap.el ends here
+
 #+end_src
+# have to have an empty line at the end so that a newline shows up
+# when tangled ... surely this is a bug?
 ** Testing :noexport:
 #+name: test-portable
 #+begin_src bash :var THIS_FILE=(buffer-file-name) :results none
@@ -1540,5 +1551,5 @@ When running a file.
 * Local Variables Footer :noexport:
 
 # Local Variables:
-# eval: (progn (setq-local orgstrap-min-org-version nil) (let ((actual (org-version)) (need orgstrap-min-org-version)) (or (fboundp #'orgstrap--confirm-eval) (not need) (string> actual need) (string= actual need) (error "your org is too old! %s < %s" actual need))) (defun orgstrap-norm-func--prp-1\.0 (body) (let ((print-quoted nil)) (prin1-to-string (read (concat "(progn\n" body "\n)"))))) (unless (boundp 'orgstrap-norm-func) (defvar orgstrap-norm-func nil)) (defun orgstrap-norm-embd (body) (funcall orgstrap-norm-func body)) (unless (fboundp #'orgstrap-norm) (defalias 'orgstrap-norm 'orgstrap-norm-embd)) (defun orgstrap-org-src-coderef-regexp (fmt &optional label) (let ((fmt org-coderef-label-format)) (format "\\([:blank:]*\\(%s\\)[:blank:]*\\)$" (replace-regexp-in-string "%s" (if label (regexp-quote label) "\\([-a-zA-Z0-9_][-a-zA-Z0-9_ ]*\\)") (regexp-quote fmt) nil t)))) (unless (fboundp 'org-src-coderef-regexp) (defalias 'org-src-coderef-regexp 'orgstrap-org-src-coderef-regexp)) (defun orgstrap--expand-body (info) (let ((coderef (nth 6 info)) (expand (if (org-babel-noweb-p (nth 2 info) :eval) (org-babel-expand-noweb-references info) (nth 1 info)))) (if (not coderef) expand (replace-regexp-in-string (org-src-coderef-regexp coderef) "" expand nil nil 1)))) (defun orgstrap--confirm-eval-portable (lang body) (not (and (member lang '("elisp" "emacs-lisp")) (let* ((body (orgstrap--expand-body (org-babel-get-src-block-info))) (body-normalized (orgstrap-norm body)) (content-checksum (intern (secure-hash orgstrap-cypher body-normalized)))) (eq orgstrap-block-checksum content-checksum))))) (defalias 'orgstrap--confirm-eval 'orgstrap--confirm-eval-portable) (let ((ocbe org-confirm-babel-evaluate)) (setq-local orgstrap-norm-func orgstrap-norm-func-name) (setq-local org-confirm-babel-evaluate #'orgstrap--confirm-eval) (unwind-protect (save-excursion (org-babel-goto-named-src-block "orgstrap") (org-babel-execute-src-block)) (setq-local org-confirm-babel-evaluate ocbe))))
+# eval: (progn (setq-local orgstrap-min-org-version nil) (let ((actual (org-version)) (need orgstrap-min-org-version)) (or (fboundp #'orgstrap--confirm-eval) (not need) (string< need actual) (string= need actual) (error "Your org is too old! %s < %s" actual need))) (defun orgstrap-norm-func--prp-1\.0 (body) (let ((print-quoted nil)) (prin1-to-string (read (concat "(progn\n" body "\n)"))))) (unless (boundp 'orgstrap-norm-func) (defvar orgstrap-norm-func orgstrap-norm-func-name)) (defun orgstrap-norm-embd (body) (funcall orgstrap-norm-func body)) (unless (fboundp #'orgstrap-norm) (defalias 'orgstrap-norm 'orgstrap-norm-embd)) (defun orgstrap-org-src-coderef-regexp (fmt &optional label) (let ((fmt org-coderef-label-format)) (format "\\([:blank:]*\\(%s\\)[:blank:]*\\)$" (replace-regexp-in-string "%s" (if label (regexp-quote label) "\\([-a-zA-Z0-9_][-a-zA-Z0-9_ ]*\\)") (regexp-quote fmt) nil t)))) (unless (fboundp #'org-src-coderef-regexp) (defalias 'org-src-coderef-regexp 'orgstrap-org-src-coderef-regexp)) (defun orgstrap--expand-body (info) (let ((coderef (nth 6 info)) (expand (if (org-babel-noweb-p (nth 2 info) :eval) (org-babel-expand-noweb-references info) (nth 1 info)))) (if (not coderef) expand (replace-regexp-in-string (org-src-coderef-regexp coderef) "" expand nil nil 1)))) (defun orgstrap--confirm-eval-portable (lang body) (not (and (member lang '("elisp" "emacs-lisp")) (let* ((body (orgstrap--expand-body (org-babel-get-src-block-info))) (body-normalized (orgstrap-norm body)) (content-checksum (intern (secure-hash orgstrap-cypher body-normalized)))) (eq orgstrap-block-checksum content-checksum))))) (defalias 'orgstrap--confirm-eval 'orgstrap--confirm-eval-portable) (let ((ocbe org-confirm-babel-evaluate)) (setq-local orgstrap-norm-func orgstrap-norm-func-name) (setq-local org-confirm-babel-evaluate #'orgstrap--confirm-eval) (unwind-protect (save-excursion (org-babel-goto-named-src-block "orgstrap") (org-babel-execute-src-block)) (setq-local org-confirm-babel-evaluate ocbe))))
 # End:
