--- a/README.org
+++ b/README.org
@@ -1,4 +1,4 @@
-# -*- org-adapt-indentation: nil; org-edit-src-content-indentation: 0; orgstrap-cypher: sha256; orgstrap-block-checksum: ee9066e494061f0424505060e1f51926c1ea79ee50a1df6869037bfb6136ddaf; orgstrap-norm-func-name: orgstrap-norm-func--prp-1\.0; -*-
+# -*- org-adapt-indentation: nil; org-edit-src-content-indentation: 0; orgstrap-cypher: sha256; orgstrap-block-checksum: 15b7b31b88997e837e9a315b4eedff970d0e5259e32a6e88ea73b085337f7494; orgstrap-norm-func-name: orgstrap-norm-func--prp-1\.0; -*-
 # [[orgstrap][jump to orgstrap block for this file]]
 #+title: Bootstrap an org-mode file using file local variables
 #+options: num:nil \n:nil
@@ -431,7 +431,7 @@ Here is the prop line from the first line of this file that
 includes the cypher and checksum of the =orgstrap= block.
 #+name: local-variables-prop-line-example
 #+begin_src org :eval never
-# -*- org-adapt-indentation: nil; org-edit-src-content-indentation: 0; orgstrap-cypher: sha256; orgstrap-block-checksum: ee9066e494061f0424505060e1f51926c1ea79ee50a1df6869037bfb6136ddaf; orgstrap-norm-func-name: orgstrap-norm-func--prp-1\.0; -*-
+# -*- org-adapt-indentation: nil; org-edit-src-content-indentation: 0; orgstrap-cypher: sha256; orgstrap-block-checksum: 15b7b31b88997e837e9a315b4eedff970d0e5259e32a6e88ea73b085337f7494; orgstrap-norm-func-name: orgstrap-norm-func--prp-1\.0; -*-
 #+end_src
 
 # BE VERY CAREFUL WITH MANUAL EDITS
@@ -673,6 +673,9 @@ is already in use, =cl-case= is the logical solution for portability.
 
 (defvar orgstrap-link-message "jump to the orgstrap block for this file"
   "Default message for file internal links.")
+
+(defvar orgstrap--local-variables nil
+  "Variable to capture local variables from `hack-local-variables'.")
 
 ;; local variable generation functions
 
